[package]
name = "string-compare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
textdistance = "1.0.2"
wasm-bindgen = { version = "0.2.89", features = ["serde_json", "serde", "serde-serialize"] }
web-sys = { version = "0.3.66", features = [ "Document", "HtmlElement", "Element" ] }
